--- a/javascript-amazon-project-main/amazon.html
+++ b/javascript-amazon-project-main/amazon.html
@@ -52,7 +52,8 @@
     </div>
     
     <div class="main">
-      <div class="products-grid js-products-grid">
+      <div class="products-grid
+      js-products-grid">
         <div class="product-container">
           <div class="product-image-container">
             <img class="product-image"
@@ -153,6 +154,7 @@
       </div>
     </div>
 
+    <script src ="data/products.js"></script>
     <script src = "scripts/amazon.js"> </script>
   </body>
 </html>
